# graduate

./: .gitignore
Computer-Security/: .gitignore  README.md  attack.py  detector.py  homework-4.txt  homework-5.txt
Computer-Security/Homework-2/: ciphertext  hw2  plaintext  probklem_2.py  vignere-decrpyt.py
Computer-Security/Network_Security/: pcap.txt  proj3.pcap
Computer-Security/Project-1/: evil.py  file1.py  file2.py  generating_collisions.txt  good.py  len_ext_attack.py  pymd5.py  suffix  suffix2  writeup.txt
Computer-Security/Project-1/fastcoll/: fastcoll  file1  file2
Computer-Security/Project-2/: attack.txt  csrf_1.html  note.txt
Computer-Security/Project-2/project2_submission/: csrf_0.html  sql_0.txt  sql_1.txt  xss_0.html  xss_1.txt  xss_2.txt  xss_3.txt
Computer-Security/forensics/IRC-logs/: planning.txt
Computer-Security/forensics/Password _list/: Compare the Triplets _ Algorithms Question _ HackerRank.html  Mini-Max Sum _ Algorithms Question _ HackerRank.html  dead_passwords.txt  usernames.txt
Computer-Security/forensics/log/: aptitude  btmp  debug  dmesg  dmesg.0  faillog  lastlog  messages  syslog  wtmp
Computer-Security/forensics/submission/: report.txt
Computer-Security/targets/: .sol0.py  .sol1.py  helper.c  sol2.py  sol3.py  sol4.py  sol5.py  sol6.py  target0.s  tmp
Higher_Dimensional_Project/: .gitignore  create_ma_parameters.m  cross_validation.m  cross_validation_test.m  data_catagorization.mat  data_path_extraction.m  feature_extraction.m  isomap_method.m  jk_tests.m  johnson_linden_test.m  neuralNetClassify.m  neuralNetKfold_withvalidation.m  neuralNetKfold_withvalidation_mfcc_mean_var.m  neuralNet_kfold_GMM5_mfcc.m  newData_neuralTest.m  protoype_features.m  similarity_functions.m  template.m
Higher_Dimensional_Project/Latex/Final paper/: final_paper.tex
Higher_Dimensional_Project/Latex/Proposal/: K-Nearest Neighbor_100.fig  K-Nearest Neighbor_20.fig  K-Nearest Neighbor_200.fig  Proposal.tex
Higher_Dimensional_Project/ma/: ma_cm_visu.m  ma_cms.m  ma_fc.m  ma_fp.m  ma_g1c_ComputeSimilarities.m  ma_g1c_FeatureExtraction.m  ma_kmeans.m  ma_mfcc.m  ma_ph.m  ma_sh.m  ma_simple_eval.m  ma_simple_iom.m  ma_sone.m  ma_test_create_wav.m
Probabilistic_models/: .gitignore
Probabilistic_models/hw0/: get_dataset.sh  tasks.py
Probabilistic_models/hw1/: task1.py
Probabilistic_models/hw3/: assignment3.py  hw3.py  weissPatterns.py
Probabilistic_models/hw4/: hw4.py
Probabilistic_models/hw5/: tasks.py
Probabilistic_models/hw6/: part2.py
Probabilistic_models/hw7/: parts.py
Probabilistic_models/hw8/: tasks.py
adv_robotics_project/: .gitignore  README.md  Software_Overview.graphml  camera-640.yaml
adv_robotics_project/install_scripts/: install.sh  opencv.sh
adv_robotics_project/other/duckdns/: duck.sh  readme.md
adv_robotics_project/src/: drive_course.launch  imu_test.launch  test_drive_course.launch
adv_robotics_project/src/blobdetection/: CMakeLists.txt  package.xml
adv_robotics_project/src/blobdetection/msg/: BALL.msg
adv_robotics_project/src/blobdetection/src/: blobdetector.cpp  image_pub.cpp
adv_robotics_project/src/camera_img/: CMakeLists.txt  README.md  camera-640.yaml  camera.yaml  camera_pipeline.launch  camera_pipline.launch  package.xml
adv_robotics_project/src/camera_img/include/camera_img/: withrobot_camera.cpp  withrobot_camera.hpp  withrobot_utility.cpp  withrobot_utility.hpp
adv_robotics_project/src/camera_img/src/: blur.cpp  image_pub.cpp
adv_robotics_project/src/edgedetection/: CMakeLists.txt  package.xml
adv_robotics_project/src/edgedetection/src/: edgedetector.cpp
adv_robotics_project/src/libuvc_ros/: .gitmodules  README.md
adv_robotics_project/src/libuvc_ros/libuvc_camera/: 53-uvc.rules  CMakeLists.txt  uvccam.launch
adv_robotics_project/src/libuvc_ros/libuvc_camera/src/: camera_driver.cpp  main.cpp
adv_robotics_project/src/sparky2/: CMakeLists.txt  package.xml
adv_robotics_project/src/stopdetection/: CMakeLists.txt  package.xml
adv_robotics_project/src/stopdetection/msg/: STOP_SIGNAL.msg
adv_robotics_project/src/stopdetection/src/: stopdetector.cpp
ecen5013/ECEN5013_shared_projects/: Makefile  README.md  sources.mk
ecen5013/ECEN5013_shared_projects/include/: SPI.h  circbuf.h  cmds.h  data.h  dma.h  gpio.h  log.h  memory.h  minunit.h  nRF24L01.h  profiler.h  project1.h  test_all.h  test_circbuf.h  timer.h  uart.h
ecen5013/ECEN5013_shared_projects/src/: SPI.c  circbuf.c  cmds.c  data.c  dma.c  gpio.c  log.c  main.c  memory.c  nRF24L01.c  profiler.c  project1.c  template.c  test_circbuf.c  timer.c  uart.c
ecen5013/ECEN5013_shared_projects/test/: test_data.c  test_main.c  test_memory.c  test_template.c
ecen5013/beagle_bone_test/: Makefile  hw1.c  hw1.h  main.c
ecen5013/ecen_5013_final/: .gitignore  Makefile  README.md  sources.mk
ecen5013/ecen_5013_final/incl/: XIO.h  log.h  osc.h  tempate.h
ecen5013/ecen_5013_final/src/: XIO.c  log.c  main.c  osc.c  template.c
ecen_5763/Lab3-Examples/: index.html
ecen_5763/final_project/: calibrate.py  calibration.yaml
ecen_5763/final_project/real_sense_vo/: CMakeLists.txt  main.cpp
ecen_5763/final_project/test_realsense/: CMakeLists.txt  realsense_test.cpp  rs-imshow.cpp
ecen_5763/final_project/test_xtion/: CMakeLists.txt  flow_test.cpp  record_cv.cpp
ecen_5763/final_project/vio_odom/: CMakeLists.txt
ecen_5763/final_project/visual_odom_test/: CMakeLists.txt  phidget_test.c  visual_odom_test.cpp
ecen_5763/final_project/visual_odom_test/odom/: odom_funcs.hpp  visual_odom_test.cpp
ecen_5763/final_project/ws_vio/: imgui.ini
ecen_5763/hw1/question2/: Makefile  sobel.cpp
ecen_5763/hw1/question3/: Makefile  grid_Trees.ppm  sharpen.c  sharpen_grid.c
ecen_5763/hw3/question2/: CMakeLists.txt  median_filter.cpp
ecen_5763/hw3/question3/: CMakeLists.txt  frame_difference.cpp
ecen_5763/hw3/question4/: CMakeLists.txt  grey_PGM.cpp
ecen_5763/hw3/question5/: CMakeLists.txt  COM_function.cpp
ecen_5763/hw3/question6/: CMakeLists.txt  Q6_function.cpp
ecen_5763/hw4/question2/: CMakeLists.txt
(+105 files in other folders)
