<package>
  <name>camera_img</name>
  <version>0.0.0</version>
  <description>get images from camera and publish</description>
  <author>Zhenguo</author>
  <maintainer email="Zhenguo.Chen@colorado.edu">Zhenguo Chen</maintainer>
  <license>A</license>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
